--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- OGP 태그 (JavaScript로 동적 업데이트될 기본값) -->
     <meta property="og:title" content="내 안의 모동숲 주민 찾기" id="og-title">
     <meta property="og:description" content="나는 모여봐요 동물의 숲에서 어떤 주민일까요? 지금 테스트해보세요!" id="og-description">
-    <meta property="og:image" content="https://via.placeholder.com/1200x630/7B68EE/FFFFFF?text=Animal+Crossing+Quiz" id="og-image">
-    <meta property="og:url" content="https://codepen.io/your-username/pen/your-pen-id" id="og-url"> <!-- 실제 CodePen URL로 변경 필요 -->
+    <meta property="og:image" content="https://via.placeholder.com/1200x630/4CAF50/FFFFFF?text=Animal+Crossing+Quiz" id="og-image">
+    <meta property="og:url" content="https://animal-crossing-test.vercel.app" id="og-url">
 </head>
 <body>
     <header class="hero-section">
@@ -64,12 +64,8 @@
         </section>
     </main>
 
-    <footer>
-        <div class="container">
-            <p>© 2024 모동숲 주민 테스트. Powered by CodePen.</p>
-        </div>
-    </footer>
-
+    <!-- 푸터 문구 제거 -->
+    
     <script src="script.js"></script>
 </body>
 </html>
